add ShiroServiceAccountManager tests and fix gradlew precommit
Signed-off-by: Stephen Crawford <steecraw@amazon.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -230,31 +230,74 @@ tasks.named("processResources").configure {
 
 tasks.named("thirdPartyAudit").configure {
     ignoreMissingClasses(
-            // from com.fasterxml.jackson.dataformat.yaml.YAMLMapper (jackson-dataformat-yaml)
-            'com.fasterxml.jackson.databind.ObjectMapper',
+            'com.fasterxml.jackson.annotation.JacksonAnnotationsInside',
+            'com.fasterxml.jackson.annotation.JacksonInject',
+            'com.fasterxml.jackson.annotation.JacksonInject$Value',
+            'com.fasterxml.jackson.annotation.JsonAlias',
+            'com.fasterxml.jackson.annotation.JsonAnyGetter',
+            'com.fasterxml.jackson.annotation.JsonAnySetter',
+            'com.fasterxml.jackson.annotation.JsonAutoDetect',
+            'com.fasterxml.jackson.annotation.JsonAutoDetect$Value',
+            'com.fasterxml.jackson.annotation.JsonAutoDetect$Visibility',
+            'com.fasterxml.jackson.annotation.JsonBackReference',
+            'com.fasterxml.jackson.annotation.JsonClassDescription',
+            'com.fasterxml.jackson.annotation.JsonCreator',
+            'com.fasterxml.jackson.annotation.JsonCreator$Mode',
+            'com.fasterxml.jackson.annotation.JsonEnumDefaultValue',
+            'com.fasterxml.jackson.annotation.JsonFilter',
+            'com.fasterxml.jackson.annotation.JsonFormat',
+            'com.fasterxml.jackson.annotation.JsonFormat$Feature',
+            'com.fasterxml.jackson.annotation.JsonFormat$Shape',
+            'com.fasterxml.jackson.annotation.JsonFormat$Value',
+            'com.fasterxml.jackson.annotation.JsonGetter',
+            'com.fasterxml.jackson.annotation.JsonIdentityInfo',
+            'com.fasterxml.jackson.annotation.JsonIdentityReference',
+            'com.fasterxml.jackson.annotation.JsonIgnore',
+            'com.fasterxml.jackson.annotation.JsonIgnoreProperties',
+            'com.fasterxml.jackson.annotation.JsonIgnoreProperties$Value',
+            'com.fasterxml.jackson.annotation.JsonIgnoreType',
+            'com.fasterxml.jackson.annotation.JsonInclude',
+            'com.fasterxml.jackson.annotation.JsonInclude$Value',
+            'com.fasterxml.jackson.annotation.JsonIncludeProperties',
+            'com.fasterxml.jackson.annotation.JsonIncludeProperties$Value',
+            'com.fasterxml.jackson.annotation.JsonKey',
+            'com.fasterxml.jackson.annotation.JsonManagedReference',
+            'com.fasterxml.jackson.annotation.JsonMerge',
+            'com.fasterxml.jackson.annotation.JsonProperty',
+            'com.fasterxml.jackson.annotation.JsonProperty$Access',
+            'com.fasterxml.jackson.annotation.JsonPropertyDescription',
+            'com.fasterxml.jackson.annotation.JsonPropertyOrder',
+            'com.fasterxml.jackson.annotation.JsonRawValue',
+            'com.fasterxml.jackson.annotation.JsonRootName',
+            'com.fasterxml.jackson.annotation.JsonSetter',
+            'com.fasterxml.jackson.annotation.JsonSetter$Value',
+            'com.fasterxml.jackson.annotation.JsonSubTypes',
+            'com.fasterxml.jackson.annotation.JsonSubTypes$Type',
+            'com.fasterxml.jackson.annotation.JsonTypeId',
+            'com.fasterxml.jackson.annotation.JsonTypeInfo',
+            'com.fasterxml.jackson.annotation.JsonTypeInfo$As',
+            'com.fasterxml.jackson.annotation.JsonTypeInfo$Id',
+            'com.fasterxml.jackson.annotation.JsonTypeInfo$None',
+            'com.fasterxml.jackson.annotation.JsonTypeName',
+            'com.fasterxml.jackson.annotation.JsonUnwrapped',
+            'com.fasterxml.jackson.annotation.JsonValue',
+            'com.fasterxml.jackson.annotation.JsonView',
+            'com.fasterxml.jackson.annotation.Nulls',
+            'com.fasterxml.jackson.annotation.ObjectIdGenerator',
+            'com.fasterxml.jackson.annotation.ObjectIdGenerator$IdKey',
+            'com.fasterxml.jackson.annotation.ObjectIdGenerators$None',
+            'com.fasterxml.jackson.annotation.ObjectIdGenerators$PropertyGenerator',
+            'com.fasterxml.jackson.annotation.ObjectIdResolver',
+            'com.fasterxml.jackson.annotation.OptBoolean',
+            'com.fasterxml.jackson.annotation.PropertyAccessor',
+            'com.fasterxml.jackson.annotation.SimpleObjectIdResolver',
 
             // from log4j
             'com.conversantmedia.util.concurrent.SpinPolicy',
             'com.fasterxml.jackson.annotation.JsonInclude$Include',
-            'com.fasterxml.jackson.databind.DeserializationContext',
-            'com.fasterxml.jackson.databind.DeserializationFeature',
-            'com.fasterxml.jackson.databind.JsonMappingException',
-            'com.fasterxml.jackson.databind.JsonNode',
-            'com.fasterxml.jackson.databind.Module$SetupContext',
-            'com.fasterxml.jackson.databind.ObjectReader',
-            'com.fasterxml.jackson.databind.ObjectWriter',
-            'com.fasterxml.jackson.databind.SerializerProvider',
-            'com.fasterxml.jackson.databind.deser.std.StdDeserializer',
-            'com.fasterxml.jackson.databind.deser.std.StdScalarDeserializer',
-            'com.fasterxml.jackson.databind.module.SimpleModule',
-            'com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter',
-            'com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider',
-            'com.fasterxml.jackson.databind.ser.std.StdScalarSerializer',
-            'com.fasterxml.jackson.databind.ser.std.StdSerializer',
             'com.fasterxml.jackson.dataformat.xml.JacksonXmlModule',
             'com.fasterxml.jackson.dataformat.xml.XmlMapper',
             'com.fasterxml.jackson.dataformat.xml.util.DefaultXmlPrettyPrinter',
-            'com.fasterxml.jackson.databind.node.ObjectNode',
             'org.fusesource.jansi.Ansi',
             'org.fusesource.jansi.AnsiRenderer$Code',
             'com.lmax.disruptor.EventFactory',
@@ -314,9 +357,6 @@ tasks.named("thirdPartyAudit").configure {
             'org.noggit.JSONParser',
 
             // from lucene-spatial
-            'com.fasterxml.jackson.databind.JsonSerializer',
-            'com.fasterxml.jackson.databind.JsonDeserializer',
-            'com.fasterxml.jackson.databind.node.ArrayNode',
             'com.google.common.geometry.S2Cell',
             'com.google.common.geometry.S2CellId',
             'com.google.common.geometry.S2Projections',
