--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -18,6 +18,7 @@ asm               = 9.5
 jettison          = 1.5.4
 woodstox          = 6.4.0
 kotlin            = 1.7.10
+guava             = 31.1-jre
 
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
