--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -25,6 +25,7 @@ jna               = 5.5.0
 
 netty             = 4.1.91.Final
 joda              = 2.12.2
+jetty             = 9.4.51.v20230217
 
 # when updating this version, you need to ensure compatibility with:
 #  - plugins/ingest-attachment (transitive dependency, check the upstream POM)
