--- a/test/fixtures/hdfs-fixture/build.gradle
+++ b/test/fixtures/hdfs-fixture/build.gradle
@@ -34,7 +34,11 @@ dependencies {
   api("org.apache.hadoop:hadoop-minicluster:3.3.5") {
     exclude module: 'websocket-client'
     exclude module: 'jettison'
+    exclude module: 'netty'
+    exclude module: 'guava'
+    exclude group: 'org.codehaus.jackson'
   }
+
   api "org.codehaus.jettison:jettison:${versions.jettison}"
   api "org.mockito:mockito-core:${versions.mockito}"
   api "org.apache.commons:commons-compress:1.21"
@@ -51,4 +55,7 @@ dependencies {
   api 'org.eclipse.jetty:jetty-server:9.4.49.v20220914'
   api "com.google.protobuf:protobuf-java:3.21.8"
   api 'org.apache.zookeeper:zookeeper:3.8.0'
+  api "org.eclipse.jetty:jetty-server:${versions.jetty}"
+  api "org.eclipse.jetty.websocket:javax-websocket-server-impl:${versions.jetty}"
+  runtimeOnly "com.google.guava:guava:${versions.guava}"
 }
