--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -19,12 +19,14 @@ jettison          = 1.5.4
 asm               = 9.5
 woodstox          = 6.4.0
 kotlin            = 1.7.10
+guava             = 31.1-jre
 
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
 
 netty             = 4.1.91.Final
 joda              = 2.12.2
+jetty             = 9.4.51.v20230217
 
 # when updating this version, you need to ensure compatibility with:
 #  - plugins/ingest-attachment (transitive dependency, check the upstream POM)
