Exclude protobuf-java version included with hadoop-minicluster
Signed-off-by: Marc Handalian <handalm@amazon.com>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -19,6 +19,7 @@ jettison          = 1.5.4
 woodstox          = 6.4.0
 kotlin            = 1.7.10
 guava             = 31.1-jre
+protobuf          = 3.22.3
 
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
