--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -20,6 +20,7 @@ asm               = 9.5
 woodstox          = 6.4.0
 kotlin            = 1.7.10
 guava             = 31.1-jre
+protobuf          = 3.22.3
 
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
