Rename default search pipeline setting and add getter/setter
Also change version check for ad hoc pipeline to 2.8

Signed-off-by: Michael Froh <froh@amazon.com>

--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/30_filter_query.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/30_filter_query.yml
@@ -107,7 +107,7 @@ teardown:
       indices.put_settings:
         index: test
         body:
-          index.default_search_pipeline: my_pipeline
+          index.search.default_pipeline: my_pipeline
 
   - do:
       search:
