--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/40_rename_response.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/40_rename_response.yml
@@ -13,7 +13,7 @@ teardown:
         body: >
           {
             "description": "test pipeline",
-            "response_processors":[
+            "response_processors": [
               {
                 "rename":
                   {
@@ -24,6 +24,58 @@ teardown:
             ]
           }
   - match: { acknowledged: true }
+
+  - do:
+      search_pipeline.put:
+        id: "my_pipeline_2"
+        body: >
+          {
+            "description": "test pipeline with ignore missing true",
+            "response_processors": [
+              {
+                "rename":
+                  {
+                    "field": "aa",
+                    "target_field": "b",
+                    "ignore_missing": true
+                  }
+              }
+            ]
+          }
+  - match: { acknowledged: true }
+
+  - do:
+      search_pipeline.put:
+        id: "my_pipeline_3"
+        body: >
+          {
+            "description": "test pipeline with ignore missing false",
+            "response_processors": [
+              {
+                "rename":
+                  {
+                    "field": "aa",
+                    "target_field": "b",
+                    "ignore_missing": false
+                  }
+              }
+            ]
+          }
+  - match: { acknowledged: true }
+
+  - do:
+      indices.create:
+        index: test
+
+  - do:
+      indices.put_mapping:
+        index: test
+        body:
+          properties:
+            a:
+              type: keyword
+              store: true
+              doc_values: true
 
   - do:
       index:
@@ -48,7 +100,7 @@ teardown:
         search_pipeline: "my_pipeline"
         body: { }
   - match: { hits.total.value: 1 }
-  - match: { hits.hits.0._source: {"b": "foo"} }
+  - match: { hits.hits.0._source: { "b": "foo" } }
 
   # Should also work with no search body specified
   - do:
@@ -56,4 +108,44 @@ teardown:
         index: test
         search_pipeline: "my_pipeline"
   - match: { hits.total.value: 1 }
-  - match: { hits.hits.0._source: {"b": "foo"} }
+  - match: { hits.hits.0._source: { "b": "foo" } }
+
+  # Pipeline with ignore_missing set to true
+  # Should still pass even though index does not contain field
+  - do:
+      search:
+        index: test
+        search_pipeline: "my_pipeline_2"
+  - match: { hits.total.value: 1 }
+  - match: {hits.hits.0._source: { "a": "foo" } }
+
+  # Pipeline with ignore_missing set to true
+  # Should still pass even though index does not contain field
+  - do:
+      catch: bad_request
+      search:
+        index: test
+        search_pipeline: "my_pipeline_3"
+  - match: { error.type: "illegal_argument_exception" }
+
+  # No source, using stored_fields
+  - do:
+      search:
+        index: test
+        search_pipeline: "my_pipeline"
+        body: {
+          "_source": false,
+          "stored_fields": [ "a" ]
+        }
+  - match: { hits.hits.0.fields: { "b": ["foo"] } }
+
+  # No source, using docvalue_fields
+  - do:
+      search:
+        index: test
+        search_pipeline: "my_pipeline"
+        body: {
+          "_source": false,
+          "docvalue_fields": [ "a" ]
+        }
+  - match: { hits.hits.0.fields: { "b": [ "foo" ] } }
