--- a/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
@@ -84,6 +84,10 @@
 ---
 "Test set invalid search backpressure mode":
 
+  - skip:
+      version: "- 2.9.99"
+      reason: "Parsing and validation of SearchBackpressureMode does not exist in versions < 3.0"
+
   - do:
       catch: bad_request
       cluster.put_settings:
