Add version guard for happy path test case
Signed-off-by: Andrew Ross <andrross@amazon.com>

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
@@ -73,6 +73,10 @@
 ---
 "Test set search backpressure mode":
 
+  - skip:
+      version: "- 2.3.99"
+      reason: "Search backpressure was added in 2.4"
+
   - do:
       cluster.put_settings:
         body:
