--- a/plugins/repository-s3/build.gradle
+++ b/plugins/repository-s3/build.gradle
@@ -66,7 +66,6 @@ dependencies {
   api "software.amazon.awssdk:aws-xml-protocol:${versions.aws}"
   api "software.amazon.awssdk:aws-json-protocol:${versions.aws}"
   api "software.amazon.awssdk:aws-query-protocol:${versions.aws}"
-  api "software.amazon.awssdk:netty-nio-client:${versions.aws}"
   api "software.amazon.awssdk:sts:${versions.aws}"
   api "org.reactivestreams:reactive-streams:${versions.reactivestreams}"
   // TODO
@@ -385,25 +384,47 @@ thirdPartyAudit.ignoreMissingClasses(
   'org.apache.avalon.framework.logger.Logger',
   'org.apache.log.Hierarchy',
   'org.apache.log.Logger',
-  'software.amazon.ion.IonReader',
-  'software.amazon.ion.IonSystem',
-  'software.amazon.ion.IonType',
-  'software.amazon.ion.IonWriter',
-  'software.amazon.ion.Timestamp',
-  'software.amazon.ion.system.IonBinaryWriterBuilder',
-  'software.amazon.ion.system.IonSystemBuilder',
-  'software.amazon.ion.system.IonTextWriterBuilder',
-  'software.amazon.ion.system.IonWriterBuilder',
-  // We don't use the kms dependency
-  'software.amazon.awssdk.services.kms.AWSKMS',
-  'software.amazon.awssdk.services.kms.AWSKMSClient',
-  'software.amazon.awssdk.services.kms.model.DecryptRequest',
-  'software.amazon.awssdk.services.kms.model.DecryptResult',
-  'software.amazon.awssdk.services.kms.model.EncryptRequest',
-  'software.amazon.awssdk.services.kms.model.EncryptResult',
-  'software.amazon.awssdk.services.kms.model.GenerateDataKeyRequest',
-  'software.amazon.awssdk.services.kms.model.GenerateDataKeyResult',
-  'software.amazon.awssdk.services.kms.AWSKMSClientBuilder'
+  'org.slf4j.Logger',
+  'org.slf4j.LoggerFactory',
+  'org.slf4j.event.Level',
+  'software.amazon.awssdk.arns.Arn',
+  'software.amazon.awssdk.arns.ArnResource',
+  'software.amazon.awssdk.crt.CRT',
+  'software.amazon.awssdk.crt.auth.credentials.Credentials',
+  'software.amazon.awssdk.crt.auth.credentials.CredentialsProvider',
+  'software.amazon.awssdk.crt.auth.credentials.DelegateCredentialsProvider$DelegateCredentialsProviderBuilder',
+  'software.amazon.awssdk.crt.http.HttpHeader',
+  'software.amazon.awssdk.crt.http.HttpMonitoringOptions',
+  'software.amazon.awssdk.crt.http.HttpProxyOptions',
+  'software.amazon.awssdk.crt.http.HttpRequest',
+  'software.amazon.awssdk.crt.http.HttpRequestBodyStream',
+  'software.amazon.awssdk.crt.io.ClientBootstrap',
+  'software.amazon.awssdk.crt.io.ExponentialBackoffRetryOptions',
+  'software.amazon.awssdk.crt.io.StandardRetryOptions',
+  'software.amazon.awssdk.crt.io.TlsCipherPreference',
+  'software.amazon.awssdk.crt.io.TlsContext',
+  'software.amazon.awssdk.crt.io.TlsContextOptions',
+  'software.amazon.awssdk.crt.s3.ChecksumAlgorithm',
+  'software.amazon.awssdk.crt.s3.ChecksumConfig',
+  'software.amazon.awssdk.crt.s3.ChecksumConfig$ChecksumLocation',
+  'software.amazon.awssdk.crt.s3.ResumeToken',
+  'software.amazon.awssdk.crt.s3.S3Client',
+  'software.amazon.awssdk.crt.s3.S3ClientOptions',
+  'software.amazon.awssdk.crt.s3.S3FinishedResponseContext',
+  'software.amazon.awssdk.crt.s3.S3MetaRequest',
+  'software.amazon.awssdk.crt.s3.S3MetaRequestOptions',
+  'software.amazon.awssdk.crt.s3.S3MetaRequestOptions$MetaRequestType',
+  'software.amazon.awssdk.crt.s3.S3MetaRequestResponseHandler',
+  'software.amazon.awssdk.crtcore.CrtConfigurationUtils',
+  'software.amazon.awssdk.crtcore.CrtConnectionHealthConfiguration',
+  'software.amazon.awssdk.crtcore.CrtConnectionHealthConfiguration$Builder',
+  'software.amazon.awssdk.crtcore.CrtConnectionHealthConfiguration$DefaultBuilder',
+  'software.amazon.awssdk.crtcore.CrtProxyConfiguration',
+  'software.amazon.awssdk.crtcore.CrtProxyConfiguration$Builder',
+  'software.amazon.awssdk.crtcore.CrtProxyConfiguration$DefaultBuilder',
+  'software.amazon.eventstream.HeaderValue',
+  'software.amazon.eventstream.Message',
+  'software.amazon.eventstream.MessageDecoder'
 )
 
 // jarhell with jdk (intentionally, because jaxb was removed from default modules in java 9)
