--- a/plugins/identity-shiro/build.gradle
+++ b/plugins/identity-shiro/build.gradle
@@ -31,6 +31,7 @@ dependencies {
   testImplementation project(path: ':plugins:transport-nio') // for http
   testImplementation "org.mockito:mockito-core:${versions.mockito}"
     testImplementation project(path: ':client:rest-high-level')
+    testImplementation 'junit:junit:4.13.2'
 }
 
 /*
