--- a/libs/core/build.gradle
+++ b/libs/core/build.gradle
@@ -107,6 +107,9 @@ tasks.named("thirdPartyAudit").configure {
     'org.osgi.framework.BundleActivator',
     'org.osgi.framework.BundleContext',
     'org.osgi.framework.BundleEvent',
+    'org.osgi.framework.FrameworkUtil',
+    'org.osgi.framework.ServiceRegistration',
+    'org.osgi.framework.ServiceReference',
     'org.osgi.framework.SynchronousBundleListener',
     'org.osgi.framework.wiring.BundleWire',
     'org.osgi.framework.wiring.BundleWiring'
