renaming processor to RenameFieldResponseProcessor
Signed-off-by: Sean Li <lnse@amazon.com>

--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/10_basic.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/10_basic.yml
@@ -13,4 +13,4 @@
 
   - contains:  { nodes.$cluster_manager.modules: { name: search-pipeline-common } }
   - contains:  { nodes.$cluster_manager.search_pipelines.processors: { type: filter_query } }
-  - contains:  { nodes.$cluster_manager.search_pipelines.processors: { type: rename } }
+  - contains:  { nodes.$cluster_manager.search_pipelines.processors: { type: rename_field } }
