updating processor name in yaml rest tests
Signed-off-by: Sean Li <lnse@amazon.com>

--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/40_rename_response.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/40_rename_response.yml
@@ -15,7 +15,7 @@ teardown:
             "description": "test pipeline",
             "response_processors": [
               {
-                "rename":
+                "rename_field":
                   {
                     "field": "a",
                     "target_field": "b"
@@ -33,7 +33,7 @@ teardown:
             "description": "test pipeline with ignore missing true",
             "response_processors": [
               {
-                "rename":
+                "rename_field":
                   {
                     "field": "aa",
                     "target_field": "b",
@@ -52,7 +52,7 @@ teardown:
             "description": "test pipeline with ignore missing false",
             "response_processors": [
               {
-                "rename":
+                "rename_field":
                   {
                     "field": "aa",
                     "target_field": "b",
