--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -1,5 +1,5 @@
 opensearch        = 3.0.0
-lucene            = 9.6.0
+lucene            = 9.7.0-snapshot-4d1ed9e
 
 bundled_jdk_vendor = adoptium
 bundled_jdk = 19.0.2+7
