Update REST API spec tests version ranges
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/indices.split/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/indices.split/10_basic.yml
@@ -223,8 +223,8 @@ setup:
 "Returns error if target index's metadata write is blocked":
 
   - skip:
-      version: " - 2.9.99"
-      reason: "only available in 3.0+"
+      version: " - 2.7.99"
+      reason: "only available in 2.8.0 and above"
 
   # block source index's write operations
   - do:
