--- a/qa/mixed-cluster/build.gradle
+++ b/qa/mixed-cluster/build.gradle
@@ -64,6 +64,9 @@ for (Version bwcVersion : BuildParams.bwcVersions.wireCompatible) {
       numberOfNodes = 4
 
       setting 'path.repo', "${buildDir}/cluster/shared/repo/${baseName}"
+      if (bwcVersion.onOrAfter("2.7.0")) {
+        setting 'opensearch.experimental.feature.search_pipeline.enabled', 'true'
+      }
     }
   }
 
