Checked in dependency version changes in version.properties
Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

--- a/plugins/repository-s3/build.gradle
+++ b/plugins/repository-s3/build.gradle
@@ -46,27 +46,27 @@ opensearchplugin {
 }
 
 dependencies {
-  api "software.amazon.awssdk:sdk-core:${versions.aws}"
-  api "software.amazon.awssdk:annotations:${versions.aws}"
-  api "software.amazon.awssdk:aws-core:${versions.aws}"
-  api "software.amazon.awssdk:auth:${versions.aws}"
-  api "software.amazon.awssdk:endpoints-spi:${versions.aws}"
-  api "software.amazon.awssdk:http-client-spi:${versions.aws}"
-  api "software.amazon.awssdk:apache-client:${versions.aws}"
-  api "software.amazon.awssdk:metrics-spi:${versions.aws}"
-  api "software.amazon.awssdk:profiles:${versions.aws}"
-  api "software.amazon.awssdk:regions:${versions.aws}"
-  api "software.amazon.awssdk:utils:${versions.aws}"
-  api "software.amazon.awssdk:aws-json-protocol:${versions.aws}"
-  api "software.amazon.awssdk:protocol-core:${versions.aws}"
-  api "software.amazon.awssdk:json-utils:${versions.aws}"
-  api "software.amazon.awssdk:third-party-jackson-core:${versions.aws}"
-  api "software.amazon.awssdk:s3:${versions.aws}"
-  api "software.amazon.awssdk:signer:${versions.aws}"
-  api "software.amazon.awssdk:aws-xml-protocol:${versions.aws}"
-  api "software.amazon.awssdk:aws-json-protocol:${versions.aws}"
-  api "software.amazon.awssdk:aws-query-protocol:${versions.aws}"
-  api "software.amazon.awssdk:sts:${versions.aws}"
+  api "software.amazon.awssdk:sdk-core:${versions.aws_v2}"
+  api "software.amazon.awssdk:annotations:${versions.aws_v2}"
+  api "software.amazon.awssdk:aws-core:${versions.aws_v2}"
+  api "software.amazon.awssdk:auth:${versions.aws_v2}"
+  api "software.amazon.awssdk:endpoints-spi:${versions.aws_v2}"
+  api "software.amazon.awssdk:http-client-spi:${versions.aws_v2}"
+  api "software.amazon.awssdk:apache-client:${versions.aws_v2}"
+  api "software.amazon.awssdk:metrics-spi:${versions.aws_v2}"
+  api "software.amazon.awssdk:profiles:${versions.aws_v2}"
+  api "software.amazon.awssdk:regions:${versions.aws_v2}"
+  api "software.amazon.awssdk:utils:${versions.aws_v2}"
+  api "software.amazon.awssdk:aws-json-protocol:${versions.aws_v2}"
+  api "software.amazon.awssdk:protocol-core:${versions.aws_v2}"
+  api "software.amazon.awssdk:json-utils:${versions.aws_v2}"
+  api "software.amazon.awssdk:third-party-jackson-core:${versions.aws_v2}"
+  api "software.amazon.awssdk:s3:${versions.aws_v2}"
+  api "software.amazon.awssdk:signer:${versions.aws_v2}"
+  api "software.amazon.awssdk:aws-xml-protocol:${versions.aws_v2}"
+  api "software.amazon.awssdk:aws-json-protocol:${versions.aws_v2}"
+  api "software.amazon.awssdk:aws-query-protocol:${versions.aws_v2}"
+  api "software.amazon.awssdk:sts:${versions.aws_v2}"
   api "org.reactivestreams:reactive-streams:${versions.reactivestreams}"
   api "org.apache.httpcomponents:httpclient:${versions.httpclient}"
   api "org.apache.httpcomponents:httpcore:${versions.httpcore}"
