[Backport 2.x] Reject invalid SearchBackpressureMode (#6832) (#7541) (#7571)
* Reject invalid SearchBackpressureMode (#6832) (#7541)

* Reject invalid SearchBackpressureMode (#6832)

ClusterState updates of SearchBackpressureMode are persisted without
validation which causes the entire cluster to become unstable or
corrupted when a cluster tries to load invalid mode.

Signed-off-by: Austin Lee <austin.t.lee@gmail.com>
(cherry picked from commit ba35781610b52daa852d93fb037bb10d9096177a)

* Change version guard on rest-api-spec test

Signed-off-by: Andrew Ross <andrross@amazon.com>

* Add version guard for happy path test case

Signed-off-by: Andrew Ross <andrross@amazon.com>

---------

Signed-off-by: Andrew Ross <andrross@amazon.com>
Co-authored-by: Austin Lee <austin.t.lee@gmail.com>

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.put_settings/10_basic.yml
@@ -69,3 +69,36 @@
         include_defaults: true
 
  - match: {defaults.node.attr.testattr: "test"}
+
+---
+"Test set search backpressure mode":
+
+  - skip:
+      version: "- 2.3.99"
+      reason: "Search backpressure was added in 2.4"
+
+  - do:
+      cluster.put_settings:
+        body:
+          persistent:
+            search_backpressure.mode: "monitor_only"
+
+  - match: {persistent: {search_backpressure: {mode: "monitor_only"}}}
+
+---
+"Test set invalid search backpressure mode":
+
+  - skip:
+      version: "- 2.7.99"
+      reason: "Parsing and validation of SearchBackpressureMode does not exist in versions < 2.8"
+
+  - do:
+      catch: bad_request
+      cluster.put_settings:
+        body:
+          persistent:
+            search_backpressure.mode: "monitor-only"
+
+  - match: {error.root_cause.0.type: "illegal_argument_exception"}
+  - match: { error.root_cause.0.reason: "Invalid SearchBackpressureMode: monitor-only" }
+  - match: { status: 400 }
