--- a/server/build.gradle
+++ b/server/build.gradle
@@ -134,6 +134,23 @@ dependencies {
   // precentil ranks aggregation
   api 'org.hdrhistogram:HdrHistogram:2.1.12'
 
+  // opentelemetry
+  api 'io.opentelemetry:opentelemetry-api:1.23.1'
+  api 'io.opentelemetry:opentelemetry-context:1.23.1'
+  api 'io.opentelemetry:opentelemetry-sdk:1.23.1'
+  api 'io.opentelemetry:opentelemetry-sdk-common:1.23.1'
+  api 'io.opentelemetry:opentelemetry-sdk-metrics:1.23.1'
+  api 'io.opentelemetry:opentelemetry-sdk-trace:1.23.1'
+  api 'io.opentelemetry:opentelemetry-exporter-otlp:1.23.1'
+  api 'io.opentelemetry:opentelemetry-exporter-common:1.23.1'
+  api 'io.opentelemetry:opentelemetry-exporter-otlp-common:1.23.1'
+  api 'io.opentelemetry:opentelemetry-semconv:1.23.1-alpha'
+  api 'com.squareup.okhttp3:okhttp:4.10.0'
+  api 'org.jetbrains.kotlin:kotlin-stdlib:1.6.20'
+  api 'com.squareup.okio:okio-jvm:3.0.0'
+  api 'io.opentelemetry:opentelemetry-sdk-logs:1.23.1-alpha'
+  api 'io.opentelemetry:opentelemetry-api-logs:1.23.1-alpha'
+
   // lucene spatial
   api "org.locationtech.spatial4j:spatial4j:${versions.spatial4j}", optional
   api "org.locationtech.jts:jts-core:${versions.jts}", optional
@@ -333,7 +350,63 @@ tasks.named("thirdPartyAudit").configure {
             'com.google.common.geometry.S2Projections',
             'com.google.common.geometry.S2Point',
             'com.google.common.geometry.S2$Metric',
-            'com.google.common.geometry.S2LatLng'
+            'com.google.common.geometry.S2LatLng',
+
+            // from opentelemetry
+            'android.net.http.X509TrustManagerExtensions',
+            'android.net.ssl.SSLSockets',
+            'android.os.Build$VERSION',
+            'android.security.NetworkSecurityPolicy',
+            'android.util.Log',
+            'com.google.common.io.ByteStreams',
+            'com.google.common.util.concurrent.FutureCallback',
+            'com.google.common.util.concurrent.Futures',
+            'com.google.common.util.concurrent.ListenableFuture',
+            'com.google.common.util.concurrent.MoreExecutors',
+            'io.grpc.CallOptions',
+            'io.grpc.Channel',
+            'io.grpc.ClientInterceptor',
+            'io.grpc.ClientInterceptors',
+            'io.grpc.Codec',
+            'io.grpc.Codec$Identity',
+            'io.grpc.Drainable',
+            'io.grpc.KnownLength',
+            'io.grpc.ManagedChannel',
+            'io.grpc.ManagedChannelBuilder',
+            'io.grpc.Metadata',
+            'io.grpc.Metadata$Key',
+            'io.grpc.MethodDescriptor',
+            'io.grpc.MethodDescriptor$Builder',
+            'io.grpc.MethodDescriptor$Marshaller',
+            'io.grpc.MethodDescriptor$MethodType',
+            'io.grpc.Status',
+            'io.grpc.Status$Code',
+            'io.grpc.netty.GrpcSslContexts',
+            'io.grpc.netty.NettyChannelBuilder',
+            'io.grpc.netty.shaded.io.grpc.netty.GrpcSslContexts',
+            'io.grpc.netty.shaded.io.grpc.netty.NettyChannelBuilder',
+            'io.grpc.netty.shaded.io.netty.handler.ssl.SslContextBuilder',
+            'io.grpc.okhttp.OkHttpChannelBuilder',
+            'io.grpc.stub.AbstractFutureStub',
+            'io.grpc.stub.AbstractStub',
+            'io.grpc.stub.ClientCalls',
+            'io.grpc.stub.MetadataUtils',
+            'io.netty.handler.ssl.SslContextBuilder',
+            'io.opentelemetry.api.events.EventEmitter',
+            'io.opentelemetry.api.events.EventEmitterBuilder',
+            'io.opentelemetry.api.events.EventEmitterProvider',
+            'io.opentelemetry.sdk.autoconfigure.spi.ConfigProperties',
+            'io.opentelemetry.sdk.autoconfigure.spi.metrics.ConfigurableMetricExporterProvider',
+            'io.opentelemetry.sdk.autoconfigure.spi.traces.ConfigurableSpanExporterProvider',
+            'org.bouncycastle.jsse.BCSSLParameters',
+            'org.bouncycastle.jsse.BCSSLSocket',
+            'org.conscrypt.Conscrypt',
+            'org.conscrypt.Conscrypt$Version',
+            'org.conscrypt.ConscryptHostnameVerifier',
+            'org.openjsse.javax.net.ssl.SSLParameters',
+            'org.openjsse.javax.net.ssl.SSLSocket'
+
+
     )
     ignoreViolations(
             'com.google.protobuf.MessageSchema',
@@ -342,7 +415,14 @@ tasks.named("thirdPartyAudit").configure {
             'com.google.protobuf.UnsafeUtil$Android32MemoryAccessor',
             'com.google.protobuf.UnsafeUtil$Android64MemoryAccessor',
             'com.google.protobuf.UnsafeUtil$JvmMemoryAccessor',
-            'com.google.protobuf.UnsafeUtil$MemoryAccessor'
+            'com.google.protobuf.UnsafeUtil$MemoryAccessor',
+
+            // from opentelemetry
+            'io.opentelemetry.internal.shaded.jctools.queues.MpscArrayQueueConsumerIndexField',
+            'io.opentelemetry.internal.shaded.jctools.queues.MpscArrayQueueProducerIndexField',
+            'io.opentelemetry.internal.shaded.jctools.queues.MpscArrayQueueProducerLimitField',
+            'io.opentelemetry.internal.shaded.jctools.util.UnsafeAccess',
+            'io.opentelemetry.internal.shaded.jctools.util.UnsafeRefArrayAccess'
     )
 }
 
