Fix: aws.secretKey was renamed to aws.secretAccessKey in AWS SDK v2.
Signed-off-by: dblock <dblock@dblock.org>

--- a/plugins/discovery-ec2/qa/amazon-ec2/build.gradle
+++ b/plugins/discovery-ec2/qa/amazon-ec2/build.gradle
@@ -122,7 +122,7 @@ testClusters.yamlRestTestEnvVariables {
 // Extra config for SystemProperties
 testClusters.yamlRestTestSystemProperties {
   systemProperty 'aws.accessKeyId', 'ec2_integration_test_access_key'
-  systemProperty 'aws.secretKey', 'ec2_integration_test_secret_key'
+  systemProperty 'aws.secretAccessKey', 'ec2_integration_test_secret_key'
   systemProperty 'aws.region', 'ec2_integration_test_region'
 }
 
