--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/10_basic.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/10_basic.yml
@@ -13,4 +13,5 @@
 
   - contains:  { nodes.$cluster_manager.modules: { name: search-pipeline-common } }
   - contains:  { nodes.$cluster_manager.search_pipelines.request_processors: { type: filter_query } }
+  - contains:  { nodes.$cluster_manager.search_pipelines.request_processors: { type: script } }
   - contains:  { nodes.$cluster_manager.search_pipelines.response_processors: { type: rename_field } }
