--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,7 @@ subprojects {
         }
       }
       repositories {
+        mavenLocal()
         maven {
           name = 'test'
           url = "${rootProject.buildDir}/local-test-repo"
