Support to emit multiple streams for a file content each responsible for processing a specific part of the file
Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -146,12 +146,18 @@ dependencies {
   // jna
   api "net.java.dev.jna:jna:${versions.jna}"
 
+  // jcraft
+  api "com.jcraft:jzlib:${versions.jzlib}"
+
   // protobuf
   api "com.google.protobuf:protobuf-java:${versions.protobuf}"
   api "jakarta.annotation:jakarta.annotation-api:${versions.jakarta_annotation}"
 
   //zstd
   api "com.github.luben:zstd-jni:${versions.zstd}"
+
+  // jcraft
+  api "com.jcraft:jzlib:${versions.jzlib}"
 
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
