Add compatibility check task
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -326,7 +326,7 @@ class VersionPropertiesLoader {
 }
 
 
-task cloneGitRepoAndCheckCompatibility {
+task checkCompatibility {
   def repositoryUrls = project.hasProperty('repositoryUrls') ? project.property('repositoryUrls').split(',') : [];
   String refToCheckout = project.hasProperty('refToCheckout') ?: 'main'
   def failedComponents = []
