Extract test permissions for repository-s3 into dynamic java.policyr ceated iduring build.
Signed-off-by: dblock <dblock@amazon.com>

--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -109,6 +109,10 @@ tasks.register("writeTestJavaPolicy") {
           "  permission java.io.FilePermission \"\${javax.net.ssl.trustStore}\", \"read\";",
           "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
           "  permission java.io.FilePermission \"config\", \"read\";",
+          "  permission java.util.PropertyPermission \"aws.region\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.accessKeyId\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.secretAccessKey\", \"write\";",
+          "  permission java.util.PropertyPermission \"opensearch.path.conf\", \"write\";",
           "};"
         ].join("\n")
       )
@@ -118,6 +122,10 @@ tasks.register("writeTestJavaPolicy") {
           "grant {",
           "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
           "  permission java.io.FilePermission \"config\", \"read\";",
+          "  permission java.util.PropertyPermission \"aws.region\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.accessKeyId\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.secretAccessKey\", \"write\";",
+          "  permission java.util.PropertyPermission \"opensearch.path.conf\", \"write\";",
           "};"
         ].join("\n"))
     }
