Extract Otel dependencies to a separate module
Signed-off-by: suranjay <surajkumar.tu@gmail.com>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -57,3 +57,6 @@ bytebuddy         = 1.14.3
 
 # benchmark dependencies
 jmh               = 1.35
+
+# opentelemetry dependencies
+opentelemetry    = 1.23.1
