Removing writeTestJavaPolicy for yaml test targets
Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

--- a/plugins/repository-s3/build.gradle
+++ b/plugins/repository-s3/build.gradle
@@ -535,11 +535,7 @@ if (BuildParams.runtimeJavaVersion <= JavaVersion.VERSION_1_8) {
   thirdPartyAudit.ignoreMissingClasses 'javax.activation.DataHandler'
 }
 
-def testTargets = ["test", "internalClusterTest", "s3ThirdPartyTest", "testRepositoryCreds", "yamlRestTest"]
-if (useFixture) {
-  testTargets.addAll(["yamlRestTestMinio", "yamlRestTestECS", "yamlRestTestEKS"])
-}
-testTargets.forEach { action ->
+["test", "internalClusterTest", "s3ThirdPartyTest", "testRepositoryCreds"].forEach { action ->
   tasks.named(action).configure {
     dependsOn "writeTestJavaPolicy"
     systemProperty 'java.security.policy', "file://${buildDir}/tmp/java.policy"
