Replace jboss-annotations-api_1.2_spec with jakarta.annotation-api
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -148,7 +148,7 @@ dependencies {
 
   // protobuf
   api "com.google.protobuf:protobuf-java:${versions.protobuf}"
-  implementation "org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec:${versions.jboss_annotation}"
+  api "jakarta.annotation:jakarta.annotation-api:${versions.jakarta_annotation}"
 
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
